[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/knight-vision-font/KnightVision-p7Ezy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Cormorant_Garamond/CormorantGaramond-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/menubg.png" type="Texture" id=3]
[ext_resource path="res://scripts/world/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://sprites/832-8326155_fog.png" type="Texture" id=5]
[ext_resource path="res://scripts/world/MainMenuPB.gd" type="Script" id=6]
[ext_resource path="res://sound/bgm/mainmenu.mp3" type="AudioStream" id=7]
[ext_resource path="res://sound/fx/menu_start.mp3" type="AudioStream" id=8]
[ext_resource path="res://scenes/menu/ControlMap.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=3]
size = 81
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ControlMap" parent="." instance=ExtResource( 9 )]
visible = false

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
show_behind_parent = true
margin_left = 321.0
margin_top = 48.0
margin_right = 702.0
margin_bottom = 552.0
custom_constants/separation = 10

[node name="Name" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_right = 381.0
margin_bottom = 200.0
rect_min_size = Vector2( 381, 200 )
custom_fonts/bold_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][b]JEANNE D'EATH"
text = "JEANNE D'EATH"

[node name="Space" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 381.0
margin_bottom = 224.0

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 381.0
margin_bottom = 294.0
rect_min_size = Vector2( 300, 60 )
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="Practice" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 381.0
margin_bottom = 364.0
rect_min_size = Vector2( 300, 60 )
custom_fonts/font = SubResource( 1 )
text = "Practice"

[node name="ViewControl" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 374.0
margin_right = 381.0
margin_bottom = 434.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 4 )
text = "Controls"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 444.0
margin_right = 381.0
margin_bottom = 504.0
rect_min_size = Vector2( 300, 60 )
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="ClearSave" type="Button" parent="."]
margin_left = 22.0
margin_top = 25.0
margin_right = 136.0
margin_bottom = 49.0
rect_min_size = Vector2( 137, 60 )
custom_fonts/font = SubResource( 5 )
text = "Clear Save"

[node name="PB" type="ParallaxBackground" parent="."]
layer = -1
script = ExtResource( 6 )

[node name="Menubg" type="Sprite" parent="PB"]
position = Vector2( 578, 325 )
scale = Vector2( 0.603577, 0.603577 )
texture = ExtResource( 3 )

[node name="Fog" type="ParallaxLayer" parent="PB"]
motion_mirroring = Vector2( 1868, 0 )

[node name="FogSprite" type="Sprite" parent="PB/Fog"]
position = Vector2( 895, 611 )
texture = ExtResource( 5 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
autoplay = true

[node name="FX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -7.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Practice" to="." method="_on_Practice_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ViewControl" to="." method="_on_ViewControl_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ClearSave" to="." method="_on_ClearSave_pressed"]
[connection signal="finished" from="FX" to="." method="_on_FX_finished"]
